# lambda-interpreter

./: .gitignore  .lambda-interpreter-history  CHANGELOG.md  README.md  flake.nix  lambda-interpreter.cabal
app/: Lambda.hs  Main.hs  trash.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
